--- a/homework/Homework 3 - Eric Kopen.ipynb
+++ b/homework/Homework 3 - Eric Kopen.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 230,
    "id": "f42d0a57",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 231,
    "id": "d755457d",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "8    fut_ctd_net_basis             2.684063"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 232,
    "id": "52e488dc",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
        "4          5.375      0.8060  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 233,
    "id": "584daa52",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 234,
    "id": "b2ec3beb",
    "metadata": {},
    "outputs": [
@@ -469,15 +469,15 @@
      "output_type": "stream",
      "text": [
       "Bond Basis Calculations:\n",
-      "       ticker  gross_basis      carry   net_basis\n",
-      "91282CCS Govt    -0.535022  58.572458  -59.107479\n",
-      "91282CDJ Govt    -0.190614  30.988219  -31.178833\n",
-      "91282CDY Govt     0.179109  88.537839  -88.358730\n",
-      "91282CEP Govt     0.588712  65.488924  -64.900212\n",
-      "91282CFF Govt     0.927094 130.479401 -129.552308\n",
-      "91282CFV Govt     1.422405  94.233694  -92.811289\n",
-      "91282CKW Govt    -0.302280  43.297854  -43.600133\n",
-      "91282CLD Govt    -0.298333   6.813539   -7.111871\n"
+      "       ticker  gross_basis     carry  net_basis\n",
+      "91282CCS Govt    -0.535022 -0.896292   0.361271\n",
+      "91282CDJ Govt    -0.190614 -0.396156   0.205542\n",
+      "91282CDY Govt     0.179109 -0.665286   0.844395\n",
+      "91282CEP Govt     0.588712 -0.132951   0.721663\n",
+      "91282CFF Govt     0.927094 -0.351849   1.278942\n",
+      "91282CFV Govt     1.422405  0.080569   1.341836\n",
+      "91282CKW Govt    -0.302280  0.054104  -0.356383\n",
+      "91282CLD Govt    -0.298333  0.007289  -0.305621\n"
      ]
     }
    ],
@@ -491,7 +491,7 @@
     "px_last = bond_data['px_last']\n",
     "accrued_int = bond_data['int_acc']\n",
     "conversion = bond_data['conversion']\n",
-    "coupon = bond_data['cpn']\n",
+    "coupon = bond_data['cpn'] / 100\n",
     "\n",
     "\n",
     "bond_data['gross_basis'] = px_last - (conversion * fut_price)\n",
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 235,
    "id": "5d0b5f82",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
      "output_type": "stream",
      "text": [
       "Recommended Trade:\n",
-      "Long Bond: 91282CLD Govt (Net Basis: -7.1119)\n",
+      "Long Bond: 91282CFV Govt (Net Basis: 1.3418)\n",
       "Short Future: TYZ4 Comdty at 114.2344\n"
      ]
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 236,
    "id": "1b67e379",
    "metadata": {},
    "outputs": [
@@ -571,22 +571,22 @@
      "text": [
       "Calculated Conversion Factors:\n",
       "       ticker  conversion  calculated_conversion\n",
-      "91282CCS Govt      0.7474              50.039461\n",
-      "91282CDJ Govt      0.7463              50.620398\n",
-      "91282CDY Govt      0.7670              50.831739\n",
-      "91282CEP Govt      0.8184              55.687864\n",
-      "91282CFF Govt      0.8060              53.260234\n",
-      "91282CFV Govt      0.8851              60.208037\n",
-      "91282CKW Govt      0.9069              65.695854\n",
-      "91282CLD Govt      0.9003              63.401001\n"
+      "91282CCS Govt      0.7474               0.731718\n",
+      "91282CDJ Govt      0.7463               0.723935\n",
+      "91282CDY Govt      0.7670               0.753780\n",
+      "91282CEP Govt      0.8184               0.803733\n",
+      "91282CFF Govt      0.8060               0.795882\n",
+      "91282CFV Govt      0.8851               0.876568\n",
+      "91282CKW Govt      0.9069               0.901159\n",
+      "91282CLD Govt      0.9003               0.894099\n"
      ]
     }
    ],
    "source": [
     "def calculate_conversion_factor(row):\n",
     "    C = row['cpn']  # Coupon rate\n",
-    "    n = row['days_to_mty'] // 182  # Approximate number of semi-annual coupon payments left\n",
-    "    discount_rate = 1.06  # CBOT's fixed discount rate\n",
+    "    n = round(row['days_to_mty'] / 182.5)  # Approximate number of semi-annual coupon payments left\n",
+    "    discount_rate = 1.03  # CBOT's fixed discount rate (because it is 6% anually and 3% per period)\n",
     "\n",
     "    pv_coupons = sum([(C / 2) / (discount_rate ** t) for t in range(1, n + 1)])\n",
     "\n",
@@ -594,7 +594,7 @@
     "\n",
     "    return round(pv_coupons + pv_face_value, 6)\n",
     "\n",
-    "bond_data['calculated_conversion'] = bond_data.apply(calculate_conversion_factor, axis=1)\n",
+    "bond_data['calculated_conversion'] = bond_data.apply(calculate_conversion_factor, axis=1)/100\n",
     "\n",
     "# Print results\n",
     "print(\"Calculated Conversion Factors:\")\n",
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 237,
    "id": "006ef765",
    "metadata": {},
    "outputs": [
@@ -666,26 +666,26 @@
      "output_type": "stream",
      "text": [
       "Net Basis Comparison:\n",
-      "       ticker   net_basis  net_basis_fwd\n",
-      "91282CCS Govt  -59.107479     -56.988810\n",
-      "91282CDJ Govt  -31.178833     -63.563303\n",
-      "91282CDY Govt  -88.358730     -94.872481\n",
-      "91282CEP Govt  -64.900212    -155.501507\n",
-      "91282CFF Govt -129.552308    -149.395342\n",
-      "91282CFV Govt  -92.811289    -233.893011\n",
-      "91282CKW Govt  -43.600133    -236.644122\n",
-      "91282CLD Govt   -7.111871    -228.825532\n",
+      "       ticker  net_basis  net_basis_fwd\n",
+      "91282CCS Govt   0.361271       0.425273\n",
+      "91282CDJ Govt   0.205542       0.448295\n",
+      "91282CDY Govt   0.844395       0.480713\n",
+      "91282CEP Govt   0.721663       0.532846\n",
+      "91282CFF Govt   1.278942       0.549477\n",
+      "91282CFV Govt   1.341836       0.621233\n",
+      "91282CKW Govt  -0.356383       0.495526\n",
+      "91282CLD Govt  -0.305621       0.500603\n",
       "\n",
       "Differences between net basis calculations:\n",
       "       ticker  net_basis_difference\n",
-      "91282CCS Govt             -2.118669\n",
-      "91282CDJ Govt             32.384470\n",
-      "91282CDY Govt              6.513751\n",
-      "91282CEP Govt             90.601295\n",
-      "91282CFF Govt             19.843034\n",
-      "91282CFV Govt            141.081721\n",
-      "91282CKW Govt            193.043989\n",
-      "91282CLD Govt            221.713660\n"
+      "91282CCS Govt             -0.064003\n",
+      "91282CDJ Govt             -0.242753\n",
+      "91282CDY Govt              0.363682\n",
+      "91282CEP Govt              0.188817\n",
+      "91282CFF Govt              0.729465\n",
+      "91282CFV Govt              0.720602\n",
+      "91282CKW Govt             -0.851909\n",
+      "91282CLD Govt             -0.806225\n"
      ]
     }
    ],
@@ -693,15 +693,15 @@
     "bond_data['dirty_price'] = bond_data['px_last'] + bond_data['int_acc']\n",
     "\n",
     "\n",
-    "tau_0 = bond_data['days_to_next_coupon'] / 360  # Time until next coupon\n",
-    "tau_1 = (bond_data['days_to_mty'] - bond_data['days_to_next_coupon']) / 360  # Time from coupon to maturity\n",
+    "tau_0 = bond_data['days_to_next_coupon'] / 182  # Time until next coupon\n",
+    "tau_1 = (bond_data['days_to_mty'] - bond_data['days_to_next_coupon']) / 182  # Time from coupon to maturity\n",
     "\n",
     "bond_data['fwd_dirty'] = (bond_data['dirty_price'] * (1 + bond_data['repo_implied_reporate']/100 * tau_0) - \n",
-    "                          (100 * bond_data['cpn'] / 2)) * (1 + bond_data['repo_implied_reporate']/100 * tau_1)\n",
+    "                          (100 * bond_data['cpn']/100 / 2)) * (1 + bond_data['repo_implied_reporate']/100 * tau_1)\n",
     "\n",
     "bond_data['fwd_price'] = bond_data['fwd_dirty'] - bond_data['int_acc']\n",
     "\n",
-    "bond_data['net_basis_fwd'] = bond_data['fwd_price'] - (fut_price * bond_data['conversion'])\n",
+    "bond_data['net_basis_fwd'] = (bond_data['fwd_price'] - (fut_price * bond_data['conversion']))/100\n",
     "\n",
     "# Print results\n",
     "print(\"Net Basis Comparison:\")\n",
@@ -711,6 +711,14 @@
     "bond_data['net_basis_difference'] = bond_data['net_basis'] - bond_data['net_basis_fwd']\n",
     "print(\"\\nDifferences between net basis calculations:\")\n",
     "print(bond_data[['ticker', 'net_basis_difference']].to_string(index=False))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de8ade33",
+   "metadata": {},
+   "source": [
+    "**For some reason, the net basis for the forwards appear to be moving in the opposite direction of the original net basis. I am not sure if this is correct, but wanted to note this.**"
    ]
   },
   {
@@ -745,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 238,
    "id": "765def65",
    "metadata": {},
    "outputs": [],
@@ -759,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 239,
    "id": "45e67d5c",
    "metadata": {},
    "outputs": [
@@ -911,7 +919,7 @@
        "13  FFH6 Comdty   96.140        2026-03-31      1167"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 240,
    "id": "2e59515c",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1067,7 @@
        "13  FFH6 Comdty   96.190        2026-03-31"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 241,
    "id": "beafab63",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1215,7 @@
        "13  FFU5 Comdty  96.1950        2025-09-30"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 242,
    "id": "446be412",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1282,7 @@
        "2  2024-07-29            5.33"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 243,
    "id": "34381de1",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1375,7 @@
        "8    2026-03-18"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 244,
    "id": "08f3b38c",
    "metadata": {},
    "outputs": [],
@@ -1407,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 245,
    "id": "89988681",
    "metadata": {},
    "outputs": [
@@ -1439,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 246,
    "id": "6a098916",
    "metadata": {},
    "outputs": [
@@ -1505,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 247,
    "id": "532f79af",
    "metadata": {},
    "outputs": [],
@@ -1525,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 248,
    "id": "d6517bbd",
    "metadata": {},
    "outputs": [
@@ -1570,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 249,
    "id": "b961da06",
    "metadata": {},
    "outputs": [],
@@ -1590,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 250,
    "id": "3da66cb4",
    "metadata": {},
    "outputs": [
