--- a/homework/Homework 3 - Eric Kopen.ipynb
+++ b/homework/Homework 3 - Eric Kopen.ipynb
@@ -603,6 +603,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8a6bab1",
+   "metadata": {},
+   "source": [
+    "**these appear fairly close to the Bloomberg conversion factors, yes.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ea423f93-75fa-48d0-b789-d56563e5cb45",
    "metadata": {},
    "source": [
@@ -718,7 +726,7 @@
    "id": "de8ade33",
    "metadata": {},
    "source": [
-    "**For some reason, the net basis for the forwards appear to be moving in the opposite direction of the original net basis. I am not sure if this is correct, but wanted to note this.**"
+    "**For some reason, the net basis for the forwards appear to be moving in the opposite direction of the original net basis. I am not sure if this is correct, but wanted to note this. These all appear to be slightly off with each other.**"
    ]
   },
   {
@@ -1485,7 +1493,7 @@
    "id": "09d7ea80",
    "metadata": {},
    "source": [
-    "**Open interest seems to decline as we encounter bonds with long maturities.**"
+    "**Open interest seems to decline as we encounter bonds with long maturities. This is likely because long maturities are not as liquid and have more uncertainty.**"
    ]
   },
   {
